Styled FAQ section

--- a/css_advanced/style.css
+++ b/css_advanced/style.css
@@ -433,47 +433,55 @@ body section .faq-header{
 body section .faq-container{
     display:flex;
     gap:5rem;
+    justify-content: space-around;
 }
 
 body .faq-column{
     flex:1;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    
 }
 .faq-item{
-    padding: 1.5rem;
-    
+    width: 350px;
+    height: 242px;
+    margin: 36px 13px 45px 13px;
+
 }
 
 .faq-item p {
-    text-align: justify;
+    text-align: left;
     font-size: 14px;
-    
+    color: rgba(7, 22, 41, 0.5);
+    line-height: 24px;
 }
 
 .faq-item h3 {
     font-weight: bold;
     font-size: 16px;
+    text-align: left;
+    margin-bottom: 26px;
 }
 
 /* FOOTER */
 
 body footer{
     background-color: #071629;
-    padding: 1.25rem 2.5rem 1.5rem 2.5rem;
     display: flex;
-    justify-content: space-between;
+    height: 249px;
+    justify-content: center;
     align-items: center;
-    text-align: center;
+    
 }
 
 body footer .copyright {
-    color: rgb(255, 255, 255,100,);
-    margin: 0;
+    color: rgba(255, 255, 255, 0.35);
+    margin-top: 40px;
     padding: 0 2rem;
-    font-size: 0.9rem;
-    /* color: rgba(255,255,255,0.7); */
+    font-size: 12px;
+    width: fit-content;
+    align-self: center;
+    
 }
 
 body footer .footer{
@@ -485,12 +493,19 @@ body footer .footer{
 
 body footer .social-media{
     display: flex;
-    gap: 1.5rem;
+    gap: 30px;
 }
 
 body footer .social-media i{
-   font-size: 1.2rem;
-    color: white;
+   font-size: 18px;
+    color:#071629;
+    background-color: #ffffff;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    text-align: center;
+    padding: 6.75px;
+
 }
 
 body footer .footer-container{
