--- a/css_advanced/style.css
+++ b/css_advanced/style.css
@@ -474,20 +474,26 @@ body footer{
     
 }
 
-body footer .copyright {
-    color: rgba(255, 255, 255, 0.35);
-    margin-top: 40px;
-    padding: 0 2rem;
-    font-size: 12px;
-    width: fit-content;
-    align-self: center;
+body footer .footer-container{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    max-width: 1200px;
+    flex-direction: column;
+    padding: 0 40px;
+    justify-content: space-between; 
+    align-items: center; 
     
 }
 
+
 body footer .footer{
+    width: 100%;
     display: flex;
     justify-content: space-between;
-    font-size: 1.2rem;
+    align-items: center;
+    margin-top: 70px;
+    
     color: white;
 }
 
@@ -508,10 +514,14 @@ body footer .social-media i{
 
 }
 
-body footer .footer-container{
-    display: flex;
-    justify-content: space-between; /* Pushes logo left, icons right */
-    align-items: center; 
-    margin: 0 auto;
-    padding: 0 2rem;
+
+
+body footer .copyright {
+    color: rgba(255, 255, 255, 0.35);
+    margin-top: auto;
+    padding: 20px 0 30px ;
+    font-size: 12px;
+    width: fit-content;
+    align-self: center;
+    
 }
